# pyEVA

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  makefile  setup.py
CMakeModules/: FindGeneva.cmake
config/: GBrokerExecutor.json  GEvolutionaryAlgorithm.json  GenericIndividual.json  Go2.json
examples/: CMakeLists.txt  GGenericStarter.cpp
examples/config/: CMakeLists.txt
examples/genevatest/: GGenericStarter.cpp
examples/pagmotest/: CMakeLists.txt  pagmo.cpp
pysrc/: main.cpp  pagmo-interface.hpp  timedtests.hpp
pysrc/pyneva/: __init__.py
tests/: geneva.py  pagmo.py  test.py
