Project (Tests)
SET ( EXECUTABLENAME GGenericStarter)

# This is a workaround for a CLion-problem -- see CPP270 in the JetBrains issue tracker

SET ( ${EXECUTABLENAME}_SRCS
	GGenericStarter.cpp
       	${GENEVA_INCLUDE_DIR}/geneva-interface/Go3.hpp
)
set(CMAKE_CXX_FLAGS "-O3 -ggdb -std=c++17")


ADD_EXECUTABLE(${EXECUTABLENAME}
	${${EXECUTABLENAME}_SRCS}
)
TARGET_INCLUDE_DIRECTORIES(${EXECUTABLENAME} PRIVATE ${GENEVA_INCLUDE_DIR} ${BOOST_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES (
    ${EXECUTABLENAME}
    ${GENEVA_LIBRARIES}
    ${Boost_LIBRARIES}
)


ADD_SUBDIRECTORY (config)

#IF( GENEVA_BUILD_TESTS )
#ADD_SUBDIRECTORY (Tests)
#ENDIF()

INSTALL ( TARGETS ${EXECUTABLENAME} DESTINATION ${EXECUTABLENAME} )
